8264787: update jextract for foreign-memory-abi API changes and --enable-native-access option